--- a/style.css
+++ b/style.css
@@ -252,6 +252,33 @@ nav {
     color: #67bc00 !important;
 }
 
+.blog-section {
+    padding: 120px 0px;
+}
+
+.blog-img {
+    overflow: hidden;
+    width: 210px;
+    height: 160px;
+}
+
+.blog-img img {
+    transform: scale(1);
+    transition: all 0.3s ease 0s;
+}
+
+.blog-body .card:hover img {
+    transform: scale(1.1) !important;
+}
+
+.blog-body .card:hover h5{
+    color: var(--primary);
+}
+
+.blog-body .card h5{
+    transition: all 0.3s ease 0s;
+}
+
 @media screen and (max-width: 1005px) {
     .navbar {
         display: none;
