--- a/style.css
+++ b/style.css
@@ -271,12 +271,45 @@ nav {
     transform: scale(1.1) !important;
 }
 
-.blog-body .card:hover h5{
+.blog-body .card:hover h5 {
     color: var(--primary);
 }
 
-.blog-body .card h5{
+.blog-body .card h5 {
     transition: all 0.3s ease 0s;
+}
+
+
+footer {
+    background-color: #04091E;
+    padding: 120px;
+}
+
+.upper-footer h4 {
+    background: -webkit-linear-gradient(0deg, #ade600 0%, #62b900 100%);
+    background: -ms-linear-gradient(0deg, #ade600 0%, #62b900 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.lower-footer i,
+.lower-footer a {
+    color: var(--primary);
+}
+
+.upper-footer button {
+    background-color: #67bc00;
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    border: 1px solid transparent
+}
+
+.upper-footer button i {
+    transition: all 0.3s ease 0s;
+}
+
+.upper-footer button:hover i {
+    left: 5px;
 }
 
 @media screen and (max-width: 1005px) {
