--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav {
 }
 
 .offcanvas .dropdown-menu.show + a {
-  margin-top: 6rem; /* push the next item down */
+  margin-top: 6rem;
 }
 
 .hero-section {
